@@ -158,7 +158,7 @@ To have other code to determine if libbde was compiled with libbfio support it d
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libbde/
+https://github.com/libyal/libbde/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
